--- a/OpenGL_test_4.6_a/Todo.txt
+++ b/OpenGL_test_4.6_a/Todo.txt
@@ -1,7 +1,3 @@
-*No-initialize allocator for calculateTopology.
-
-Use explicit threads to parallelize
-
 resize event, start - request update
 
 Show mesh wireframe intelligently with removed edges.
@@ -21,3 +17,6 @@ MeshSceneElement (Mesh+Material+visibility etc) class
 Mesh+Visualization class
 
 NURBS shader
+
+============================================================
+X Use explicit threads to parallelize
