--- a/OpenGL_test_4.6_a/Todo.txt
+++ b/OpenGL_test_4.6_a/Todo.txt
@@ -8,6 +8,7 @@ Fix OpenGLPatch to use DSA (Doesn't work in Intel OpenGL 4.0)
 Polyline primitive
 Line segments primitive
 Implement more patch primitives - torus, ellipsoid, cone, cylinder, (polycylinder?)
+Knot3
 
 Material class
 MeshSceneElement (Mesh+Material+visibility etc) class
