--- a/OpenGL_test_4.6_a/Todo.txt
+++ b/OpenGL_test_4.6_a/Todo.txt
@@ -1,6 +1,6 @@
 ------------------------------------------------------------------------
+Array of lights per shader
 Implement Line thing or mesh with deleted edges
-Bounding box
 
 Fix camera control
 
